...
  const HomeScreen({super.key});

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final day = ref.watch(selectedDayProvider);
    return ListView(
      key: const ValueKey('screen-home'),
      padding: const EdgeInsets.fromLTRB(
        VSpace.margin,
        VSpace.md,
        VSpace.margin,
        VSpace.lg,
      ),
...
